[tool.poetry]
name = "fcc-data-analysis-demographic-data-analyzer"
version = "0.1.0"
description = ""
authors = ["Camila Bodack"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
